--- a/calendar/src/components/ListViewITem/ListViewItem.css
+++ b/calendar/src/components/ListViewITem/ListViewItem.css
@@ -31,6 +31,13 @@
   font-size: 11px;
   color: #888;
   text-transform: uppercase;
+  margin-top: 4px;
+}
+
+.card-date-sets-count {
+  font-size: 12px;
+  color: #888;   
+  margin-top: 4px;
 }
 
 .card-date-content {
